Addresses more pr review feedback